Add faq.css, portfolio.css, @media for h2 font size changing

--- a/index.html
+++ b/index.html
@@ -373,56 +373,71 @@ Block-15 Віктор Зварич -->
         </section>
 
         <!--Block-12 Olha Stanislavska-->
-        <section class="portfolio">
-            <h2 class="portfolio__title h2-title text-align-center">Portfolio</h2>
-            <hr class="portfolio__line line line-center">
-            <p class="portfolio__subtitle subtitle uppercase">Every frame is important. Every photoshoot is art.</p>
-            <img class="portfolio__image" width="360" src="img/portfolio-girl-in-lush-dress.png"
-                alt="A girl in a lush dress">
-            <img class="portfolio__image" width="360" src="img/portfolio-girl-with-mirror.png"
-                alt="A girl with a mirror">
-            <img class="portfolio__image" width="360" src="img/portfolio-portrait-with-flower-earring.png"
-                alt="A portrait of the girl in flower earring">
-            <img class="portfolio__image" width="360" src="img/portfolio-portrait-with-hand.png"
-                alt="A portrait of the girl with hand near her face">
-        </section>
+        <div class="block-portfolio">
+            <section class="portfolio">
+                <div class="portfolio__header">
+                    <h2 class="portfolio__header-title h2-title text-align-center">Portfolio</h2>
+                    <div class="portfolio__header-line">
+                        <hr class="line line-center">
+                    </div>
+                    <p class="portfolio__header-subtitle subtitle uppercase text-align-center">Every frame is important. Every photoshoot is art.</p>
+                </div>
+                <div class="portfolio__carusel">
+                    <img class="portfolio__carusel-image" src="img/portfolio-girl-in-lush-dress.png"
+                        alt="A girl in a lush dress">
+                    <img class="portfolio__carusel-image" src="img/portfolio-girl-with-mirror.png"
+                        alt="A girl with a mirror">
+                    <img class="portfolio__carusel-image" src="img/portfolio-portrait-with-flower-earring.png"
+                        alt="A portrait of the girl in flower earring">
+                    <img class="portfolio__carusel-image" src="img/portfolio-portrait-with-hand.png"
+                    alt="A portrait of the girl with hand near her face">
+                </div>
+            </section>
+        </div>
 
         <!--Block-13 Olha Stanislavska-->
-        <section class="faq">
-            <h2 class="faq__title h2-title text-align-center">FAQ</h2>
-            <hr class="faq__line line line-center">
-            <div class="faq__all-questions">
-                <details class="faq__question">
-                    <summary>Does Ryan shoot only in New York?</summary>
-                    Most of Ryan's projects are in New York but shooting is possible in other cities of the USA and
-                    other countries upon request.
-                </details>
-                <details class="faq__question">
-                    <summary>How long does the editing take?</summary>
-                    It all depends on the amount of footage and the number of photos that go through retouching.
-                </details>
-                <details class="faq__question">
-                    <summary>What does Ryan shoot?</summary>
-                    Ryan is a real guru of fashion, event, commercial photography, and portraits.
-                </details>
-                <details class="faq__question">
-                    <summary>How to schedule a shooting?</summary>
-                    Fill out the form below or contact Ryan directly. Tell which date you need, and Ryan will do his
-                    best to find a time slot for you.
-                </details>
-                <details class="faq__question">
-                    <summary>What if I have a creative idea for shooting?</summary>
-                    Ryan is open for inquires and interesting opportunities. TFP shoots are possible if your idea is
-                    really creative.
-                </details>
-                <details class="faq__question">
-                    <summary>Where can I find Ryan's works?</summary>
-                    Ryan's works are published in different fashion magazines: Haper's Bazaar, Vogue, Cosmopolitan,
-                    and
-                    many others.
-                </details>
-            </div>
-        </section>
+        <div class="block-faq">
+            <section class="faq">
+                <div class="faq__header">
+                    <h2 class="faq__header-title h2-title text-align-center">FAQ</h2>
+                    <div class="faq__header-line">
+                        <hr class="line line-center">
+                    </div>
+                    <p class="faq__header-subtitle subtitle uppercase text-align-center">If you have any questions, please browse through the section below.</p>
+                </div>
+                <div class="faq__all-questions">
+                    <details class="faq__question">
+                        <summary>Does Ryan shoot only in New York?</summary>
+                        Most of Ryan's projects are in New York but shooting is possible in other cities of the USA and
+                        other countries upon request.
+                    </details>
+                    <details class="faq__question">
+                        <summary>How long does the editing take?</summary>
+                        It all depends on the amount of footage and the number of photos that go through retouching.
+                    </details>
+                    <details class="faq__question">
+                        <summary>What does Ryan shoot?</summary>
+                        Ryan is a real guru of fashion, event, commercial photography, and portraits.
+                    </details>
+                    <details class="faq__question">
+                        <summary>How to schedule a shooting?</summary>
+                        Fill out the form below or contact Ryan directly. Tell which date you need, and Ryan will do his
+                        best to find a time slot for you.
+                    </details>
+                    <details class="faq__question">
+                        <summary>What if I have a creative idea for shooting?</summary>
+                        Ryan is open for inquires and interesting opportunities. TFP shoots are possible if your idea is
+                        really creative.
+                    </details>
+                    <details class="faq__question">
+                        <summary>Where can I find Ryan's works?</summary>
+                        Ryan's works are published in different fashion magazines: Haper's Bazaar, Vogue, Cosmopolitan,
+                        and
+                        many others.
+                    </details>
+                </div>
+            </section>
+        </div>
       <!-- Khrystyna Broshko -->
       <div class="main_form">
         <div class="main_background_for_form">
