Changed block FAQ

--- a/index.html
+++ b/index.html
@@ -408,33 +408,50 @@ Block-15 Віктор Зварич -->
                 <div class="faq__all-questions">
                     <details class="faq__question">
                         <summary>Does Ryan shoot only in New York?</summary>
-                        Most of Ryan's projects are in New York but shooting is possible in other cities of the USA and
-                        other countries upon request.
+                        <p class="faq__question-answer">Most of Ryan's projects are in New York but shooting is possible in other cities of the USA and
+                        other countries upon request. </p>
                     </details>
+                    <div class="faq__qustion-line">
+                        <hr>
+                    </div>
                     <details class="faq__question">
                         <summary>How long does the editing take?</summary>
-                        It all depends on the amount of footage and the number of photos that go through retouching.
+                        <p class="faq__question-answer">It all depends on the amount of footage and the number of photos that go through retouching.</p>
                     </details>
+                    <div class="faq__qustion-line">
+                        <hr>
+                    </div>
                     <details class="faq__question">
                         <summary>What does Ryan shoot?</summary>
-                        Ryan is a real guru of fashion, event, commercial photography, and portraits.
+                        <p class="faq__question-answer">Ryan is a real guru of fashion, event, commercial photography, and portraits.</p>
                     </details>
+                    <div class="faq__qustion-line">
+                        <hr>
+                    </div>
                     <details class="faq__question">
                         <summary>How to schedule a shooting?</summary>
-                        Fill out the form below or contact Ryan directly. Tell which date you need, and Ryan will do his
-                        best to find a time slot for you.
+                        <p class="faq__question-answer">Fill out the form below or contact Ryan directly. Tell which date you need, and Ryan will do his
+                        best to find a time slot for you.</p>
                     </details>
+                    <div class="faq__qustion-line">
+                        <hr>
+                    </div>
                     <details class="faq__question">
                         <summary>What if I have a creative idea for shooting?</summary>
-                        Ryan is open for inquires and interesting opportunities. TFP shoots are possible if your idea is
-                        really creative.
+                        <p class="faq__question-answer">Ryan is open for inquires and interesting opportunities. TFP shoots are possible if your idea is
+                        really creative.</p>
                     </details>
+                    <div class="faq__qustion-line">
+                        <hr>
+                    </div>
                     <details class="faq__question">
                         <summary>Where can I find Ryan's works?</summary>
-                        Ryan's works are published in different fashion magazines: Haper's Bazaar, Vogue, Cosmopolitan,
-                        and
-                        many others.
+                        <p class="faq__question-answer">Ryan's works are published in different fashion magazines: Haper's Bazaar, Vogue, Cosmopolitan,
+                        and many others.</p>
                     </details>
+                    <div class="faq__qustion-line">
+                        <hr>
+                    </div>
                 </div>
             </section>
         </div>
