Added postfolio carousel JS

--- a/index.html
+++ b/index.html
@@ -372,15 +372,10 @@ Block-15 Віктор Зварич -->
                     <p class="portfolio__header-subtitle subtitle uppercase text-align-center">Every frame is important. Every photoshoot is art.</p>
                 </div>
                 <div class="portfolio__carusel">
-                    <img class="portfolio__carusel-image" src="img/portfolio-girl-in-lush-dress.png"
-                        alt="A girl in a lush dress">
-                    <img class="portfolio__carusel-image" src="img/portfolio-girl-with-mirror.png"
-                        alt="A girl with a mirror">
-                    <img class="portfolio__carusel-image" src="img/portfolio-portrait-with-flower-earring.png"
-                        alt="A portrait of the girl in flower earring">
-                    <img class="portfolio__carusel-image" src="img/portfolio-portrait-with-hand.png"
-                    alt="A portrait of the girl with hand near her face">
-                </div>
+                    <button class="portfolio__carusel-btn-prev">⪡</button>
+                    <div class="portfolio__carusel-photoes"></div>
+                    <button class="portfolio__carusel-btn-next">⪢</button>
+                </div-portfolio__carusel>
             </section>
         </div>
 
@@ -527,6 +522,7 @@ Block-15 Віктор Зварич -->
     </footer>    
     <script src="js/header.js"></script>    
     <script type="text/javascript" src="js/works.js"></script>
+    <script src="js/portfolio-carousel.js"></script>
     <script type="text/javascript" src="https://livejs.com/live.js"></script>
 </body>
 
