Changed carousel buttons

--- a/index.html
+++ b/index.html
@@ -372,9 +372,9 @@ Block-15 Віктор Зварич -->
                     <p class="portfolio__header-subtitle subtitle uppercase text-align-center">Every frame is important. Every photoshoot is art.</p>
                 </div>
                 <div class="portfolio__carusel">
-                    <button class="portfolio__carusel-btn-prev">⪡</button>
+                    <button class="portfolio__carusel-btn-prev"> <img src="img/button-arrow-left.png" alt="button left"> </button>
                     <div class="portfolio__carusel-photoes"></div>
-                    <button class="portfolio__carusel-btn-next">⪢</button>
+                    <button class="portfolio__carusel-btn-next"><img src="img/button-arrow-right.png" alt="button right"></button>
                 </div-portfolio__carusel>
             </section>
         </div>
