--- a/index.html
+++ b/index.html
@@ -469,9 +469,14 @@ Block-15 Віктор Зварич -->
                                         value="Enter your phone number*">
                                 </div>
                                 <br><br>
-                                <div class="date_form"><label for="date">Choose date</label>
-                                    <input type="date" id="date" name="date">
-                                </div>
+                                <div class="buttom-date-form">
+                                    <input
+                                      type="date"
+                                      name="date"
+                                      placeholder="Choose Date"
+                                      required
+                                    </div>
+                                </input>
                                 <br><br>
                                 <div class="full_name_form"><input type='text' name='message'
                                         value="Leave your message"></div>
