Changed FAQ block

--- a/index.html
+++ b/index.html
@@ -385,7 +385,33 @@ Block-15 Віктор Зварич -->
         </div>
 
     <!--Block-13 Olha Stanislavska-->
+
     <div class="block-faq">
+        <section class="faq">
+            <div class="faq__header">
+                <h2 class="faq__header-title h2-title text-align-center">FAQ</h2>
+                <div class="faq__header-line">
+                    <hr class="line line-center">
+                </div>
+                <p class="faq__header-subtitle subtitle uppercase text-align-center">If you have any questions, please browse through the section below.</p>
+            </div>
+            <div class="faq__grid">
+                <div></div>
+                <div class="faq__all-questions">
+                    <div class="faq__question-wrapper">
+                        <div class="faq__question"> Does Ryan shoot only in New York? </div>
+                        <div class="faq__question-answer">Most of Ryan's projects are in New York but shooting is possible in other cities of the USA and
+                            other countries upon request. </div>
+                    </div>
+                    <div class="faq__question-line"><hr></div>
+                </div>
+                <div></div>
+            </div>
+        </section>
+    </div>
+
+
+    <!-- <div class="block-faq">
         <section class="faq">
             <div class="faq__header">
                 <h2 class="faq__header-title h2-title text-align-center">FAQ</h2>
@@ -443,7 +469,9 @@ Block-15 Віктор Зварич -->
                 </div>
             </div>
         </section>
-    </div>
+    </div> -->
+
+
       <!-- Khrystyna Broshko -->
       <div class="main_form">
         <div class="main_background_for_form">
