--- a/index.html
+++ b/index.html
@@ -399,9 +399,13 @@ Block-15 Віктор Зварич -->
                 <div></div>
                 <div class="faq__all-questions">
                     <div class="faq__question-wrapper">
-                        <div class="faq__question"> Does Ryan shoot only in New York? </div>
+                        <div class="faq__question-container"> 
+                            <div class="faq__question"> Does Ryan shoot only in New York? </div>
+                            <div class="faq__question-expand"></div>
+                        </div>
                         <div class="faq__question-answer">Most of Ryan's projects are in New York but shooting is possible in other cities of the USA and
-                            other countries upon request. </div>
+                            other countries upon request. 
+                        </div>
                     </div>
                     <div class="faq__question-line"><hr></div>
                 </div>
