--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ Block-15 Віктор Зварич -->
             <div class="faq__grid">
                 <div></div>
                 <div class="faq__all-questions">
-                    <div class="faq__question-wrapper">
+                    <div class="faq__question-acordion">
                         <div class="faq__question-container"> 
                             <div class="faq__question"> Does Ryan shoot only in New York? </div>
                             <div class="faq__question-expand"></div>
@@ -565,6 +565,7 @@ Block-15 Віктор Зварич -->
     <script type="text/javascript" src="js/works.js"></script>
     <script src="js/glider.js"></script>
     <script src="js/portfolio-carousel.js"></script> 
+    <script src="js/faq.js"></script> 
     <script type="text/javascript" src="https://livejs.com/live.js"></script>
 </body>
 
