FAQ css changed

--- a/index.html
+++ b/index.html
@@ -408,72 +408,64 @@ Block-15 Віктор Зварич -->
                         </div>
                     </div>
                     <div class="faq__question-line"><hr></div>
+
+                    <div class="faq__question-acordion">
+                        <div class="faq__question-container"> 
+                            <div class="faq__question"> How long does the editing take? </div>
+                            <div class="faq__question-expand"></div>
+                        </div>
+                        <div class="faq__question-answer">It all depends on the amount of footage and the number of photos that go through retouching. 
+                        </div>
+                    </div>
+                    <div class="faq__question-line"><hr></div>
+
+                    <div class="faq__question-acordion">
+                        <div class="faq__question-container"> 
+                            <div class="faq__question"> What does Ryan shoot? </div>
+                            <div class="faq__question-expand"></div>
+                        </div>
+                        <div class="faq__question-answer">Ryan is a real guru of fashion, event, commercial photography, and portraits.
+                        </div>
+                    </div>
+                    <div class="faq__question-line"><hr></div>
+
+                    <div class="faq__question-acordion">
+                        <div class="faq__question-container"> 
+                            <div class="faq__question"> How to schedule a shooting? </div>
+                            <div class="faq__question-expand"></div>
+                        </div>
+                        <div class="faq__question-answer">Fill out the form below or contact Ryan directly. Tell which date you need, and Ryan will do his
+                            best to find a time slot for you.
+                        </div>
+                    </div>
+                    <div class="faq__question-line"><hr></div>
+
+                    <div class="faq__question-acordion">
+                        <div class="faq__question-container"> 
+                            <div class="faq__question"> What if I have a creative idea for shooting? </div>
+                            <div class="faq__question-expand"></div>
+                        </div>
+                        <div class="faq__question-answer">Ryan is open for inquires and interesting opportunities. TFP shoots are possible if your idea is
+                            really creative.
+                        </div>
+                    </div>
+                    <div class="faq__question-line"><hr></div>
+
+                    <div class="faq__question-acordion">
+                        <div class="faq__question-container"> 
+                            <div class="faq__question"> Where can I find Ryan's works? </div>
+                            <div class="faq__question-expand"></div>
+                        </div>
+                        <div class="faq__question-answer">Ryan's works are published in different fashion magazines: Haper's Bazaar, Vogue, Cosmopolitan,
+                            and many others.
+                        </div>
+                    </div>
+                    <div class="faq__question-line"><hr></div>
                 </div>
                 <div></div>
             </div>
         </section>
     </div>
-
-
-    <!-- <div class="block-faq">
-        <section class="faq">
-            <div class="faq__header">
-                <h2 class="faq__header-title h2-title text-align-center">FAQ</h2>
-                <div class="faq__header-line">
-                    <hr class="line line-center">
-                </div>
-                <p class="faq__header-subtitle subtitle uppercase text-align-center">If you have any questions, please browse through the section below.</p>
-            </div>
-            <div class="faq__all-questions">
-                <details class="faq__question">
-                    <summary>Does Ryan shoot only in New York?</summary>
-                    <p class="faq__question-answer">Most of Ryan's projects are in New York but shooting is possible in other cities of the USA and
-                    other countries upon request. </p>
-                </details>
-                <div class="faq__qustion-line">
-                    <hr>
-                </div>
-                <details class="faq__question">
-                    <summary>How long does the editing take?</summary>
-                    <p class="faq__question-answer">It all depends on the amount of footage and the number of photos that go through retouching.</p>
-                </details>
-                <div class="faq__qustion-line">
-                    <hr>
-                </div>
-                <details class="faq__question">
-                    <summary>What does Ryan shoot?</summary>
-                    <p class="faq__question-answer">Ryan is a real guru of fashion, event, commercial photography, and portraits.</p>
-                </details>
-                <div class="faq__qustion-line">
-                    <hr>
-                </div>
-                <details class="faq__question">
-                    <summary>How to schedule a shooting?</summary>
-                    <p class="faq__question-answer">Fill out the form below or contact Ryan directly. Tell which date you need, and Ryan will do his
-                    best to find a time slot for you.</p>
-                </details>
-                <div class="faq__qustion-line">
-                    <hr>
-                </div>
-                <details class="faq__question">
-                    <summary>What if I have a creative idea for shooting?</summary>
-                    <p class="faq__question-answer">Ryan is open for inquires and interesting opportunities. TFP shoots are possible if your idea is
-                    really creative.</p>
-                </details>
-                <div class="faq__qustion-line">
-                    <hr>
-                </div>
-                <details class="faq__question">
-                    <summary>Where can I find Ryan's works?</summary>
-                    <p class="faq__question-answer">Ryan's works are published in different fashion magazines: Haper's Bazaar, Vogue, Cosmopolitan,
-                    and many others.</p>
-                </details>
-                <div class="faq__qustion-line">
-                    <hr>
-                </div>
-            </div>
-        </section>
-    </div> -->
 
 
       <!-- Khrystyna Broshko -->
