added fixed contact button and fixed burger menu

--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@ Block-15 Віктор Зварич -->
 
 
       <!-- Khrystyna Broshko -->
-      <div class="main_form">
+      <div class="main_form" id="contact-form">
         <div class="main_background_for_form">
             <div class="background_for_form">
                 <div class="page_form">
@@ -552,12 +552,27 @@ Block-15 Віктор Зварич -->
             <p>© Created by 725-team-03</p>
             <p>All rights Reserved</p>
         </div>
+        <div class="contact-button">
+            <div id="contact-button" class="wave">
+                <i></i>
+            </div>
+            <button>
+                <i></i>
+                <a href="#contact-form" class="contact-mail-me uppercase">Contact Ryan</a>
+            </button>
+            <a href="#" class="contact-telegram-icon"><i></i></a>
+            <a href="#" class="contact-whatsapp-icon"><i></i></a>
+            <a href="#" class="contact-messenger-icon">
+                <i"></i>
+            </a>
+        </div>
     </footer>    
     <script src="js/header.js"></script>    
     <script type="text/javascript" src="js/works.js"></script>
     <script src="js/glider.js"></script>
     <script src="js/portfolio-carousel.js"></script> 
     <script src="js/faq.js"></script> 
+    <script src="js/controls.js"></script>
     <script type="text/javascript" src="https://livejs.com/live.js"></script>
 </body>
 
