--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@ Block-15 Віктор Зварич -->
     <header class="header">
         <nav class="header__nav" aria-label="primary-navigation">
             <div class="nav-logo">
-                <a href="./" class="header__logo">
-                    <img class="header__logo-image" src="img/logo.svg" width="174"
-                        alt="Logo image of the 'R.Allen Photography' website">
-                </a>
-                <div class="header-clock">1</div>
+                <div>
+                    <a href="./" class="header__logo">
+                        <img class="header__logo-image" src="img/logo.svg" width="174"
+                            alt="Logo image of the 'R.Allen Photography' website">
+                    </a>
+                    <div class="header-clock">1</div>
+                </div>                
                 <div class="nav-burger">
                     <span></span>
                 </div>
