--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Block-15 Віктор Зварич -->
                         <img class="header__logo-image" src="img/logo.svg" width="174"
                             alt="Logo image of the 'R.Allen Photography' website">
                     </a>
-                    <div class="header-clock">1</div>
+                    <div class="header-clock"></div>
                 </div>                
                 <div class="nav-burger">
                     <span></span>
