--- a/index.html
+++ b/index.html
@@ -128,7 +128,11 @@ Block-15 Віктор Зварич -->
             <p class="latest-work__text">Ryan's passion is photoshoots for lookbook
                 and commercial.</p>
             <div class="latest-work__photos">
-                <div class="latest-work__image latest-work__image__girl-sun latest-work__fade"><img
+                <div class="latest-work_carousel_btn-prev_container">
+                    <button class="latest-work_carousel_btn-prev">⬅</button>
+                </div>
+                <div class="latest-work_carousel_slide-container">
+                <!-- <div class="latest-work__image latest-work__image__girl-sun latest-work__fade"><img
                         src="img/girl_hides_from_sun.png" alt="Girl hides from the sun">
                 </div>
                 <div class="latest-work__image latest-work__image__girl-turn latest-work__fade"><img
@@ -136,12 +140,10 @@ Block-15 Віктор Зварич -->
                 </div>
                 <div class="latest-work__image latest-work__image__girl-jaket latest-work__fade"><img
                         src="img/beautiful_girl_in_jacket.png" alt="Beatiful girl in a jacket">
+                </div> -->
                 </div>
-                <div class="latest-work__prev__container">
-                    <a class="latest-work__prev" onclick="plusSlides(-1)">❮</a>
-                </div>
-                <div class="latest-work__next__container">
-                    <a class="latest-work__next" onclick="plusSlides(1)">❯</a>
+                <div class="latest-work_carousel_btn-next_container">
+                    <button class="latest-work_carousel_btn-next">➡</button>
                 </div>
             </div>
         </div>
@@ -571,7 +573,7 @@ Block-15 Віктор Зварич -->
         </div>
     </footer>    
     <script src="js/header.js"></script>    
-    <script type="text/javascript" src="js/works.js"></script>
+    <script src="js/works.js"></script>
     <script src="js/glider.js"></script>
     <script src="js/portfolio-carousel.js"></script> 
     <script src="js/faq.js"></script> 
