fix: fixed html teg in block-12

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ Block-15 Віктор Зварич -->
                         <div><img class="portfolio__carusel-image" src="img/portfolio-portrait-with-hand.png" alt="A portrait of the girl with hand near her face"></div>
                     </div>
                     <button class="glider-next portfolio__carusel-btn-next"><img src="img/button-arrow-right.png" alt="button right"></button>
-                </div-portfolio__carusel>
+                </div>
             </section>
         </div>
 
