modified clock and added timer until Christmas into burger menu

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ Block-15 Віктор Зварич -->
                         <img class="header__logo-image" src="img/logo.svg" width="174"
                             alt="Logo image of the 'R.Allen Photography' website">
                     </a>
-                    <div class="header-clock"></div>
-                </div>                
+    
+                </div>
                 <div class="nav-burger">
                     <span></span>
                 </div>
@@ -65,6 +65,14 @@ Block-15 Віктор Зварич -->
                         <a class="nav-menu__link" href="#contact-form">Contact Ryan</a>
                     </li>
                 </ul>
+                <div class="header-clock hidden"></div>
+                <div class="header-christmas hidden">
+                    <span class="header-christmas-days"></span>
+                    <span class="header-christmas-hours"></span>
+                    <span class="header-christmas-minutes"></span>
+                    <span class="header-christmas-seconds"></span>
+                    <span>left until Christmas</span>
+                </div>
             </div>
         </nav>
         <!-- Block-1  Віктор Зварич -->
