added timer of war and count of killed orks

--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@ Block-15 Віктор Зварич -->
                     <span class="header-christmas-seconds"></span>
                     <span>left until Christmas</span>
                 </div>
+                <div class="days-of-war hidden"></div>
+                <div class="count-of-killed-orks hidden"></div>
             </div>
         </nav>
         <!-- Block-1  Віктор Зварич -->
