--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ Block-15 Віктор Зварич -->
                 </div>
                 <div class="days-of-war hidden"></div>
                 <div class="count-of-killed-orks hidden"></div>
+                <div class="increase-of-killed-orks hidden"></div>
             </div>
         </nav>
         <!-- Block-1  Віктор Зварич -->
